# cookplanner

./: .flake8  .gitignore  COPYING  Makefile  README.md  mypy.ini  pyproject.toml  requirements.txt
cookplanner/: backend.py  main.py  schedule.py  sturcts.py  utils.py
tests/: test_schedule.py  test_utils.py
